# skill-signer

./: README.md  SKILL.md  pyproject.toml
.github/workflows/: publish.yml
lib/: __init__.py  __main__.py  cli.py  manifest.py  ssh_signer.py  trust.py
tests/: __init__.py  test_cli.py  test_manifest.py  test_signer.py  test_trust.py
